fixed styles, dark mode, and general layout

--- a/src/index.css
+++ b/src/index.css
@@ -2,14 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Import the font */
 @font-face {
   font-family: "Wotfard";
   src: url("../src/fonts/wotfard.ttf") format("truetype");
 }
 
-.dotted-background,
-body,
-nav {
+/* Define the styles for the dotted background */
+.dotted-background {
   background-image: radial-gradient(#333333 0px, transparent 1px);
   background-size: 30px 30px;
+}
+
+/* Add the styles for dark mode */
+@media (prefers-color-scheme: dark) {
+  .dark .dotted-background {
+    background-image: radial-gradient(#666 0px, transparent 1px);
+  }
 }
